force-app/main/default/objects/Event_Registration__c/fields/Religious_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Religious_Requirement__c</fullName>
    <description>Religious Requirement Custom Question</description>
    <inlineHelpText>Religious Requirement</inlineHelpText>
    <label>Religious Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>