force-app/main/default/objects/Event_Registration__c/fields/School_College_Attending__c.field-meta.xml
<CustomField>
    <fullName>School_College_Attending__c</fullName>
    <description>This field is used to School / College Attending details</description>
    <inlineHelpText>School / college information populated further to event question set</inlineHelpText>
    <label>School / College Attending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>