force-app/main/default/objects/Event_Registration__c/fields/School_Year_Group__c.field-meta.xml
<CustomField>
    <fullName>School_Year_Group__c</fullName>
    <description>This field is used to identify the school group</description>
    <inlineHelpText>This field is used to identify the school group</inlineHelpText>
    <label>School Year Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 7</fullName>
            </value>
            <value>
                <fullName>Year 8</fullName>
            </value>
            <value>
                <fullName>Year 9</fullName>
            </value>
            <value>
                <fullName>Year 10</fullName>
            </value>
            <value>
                <fullName>Year 11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>