force-app/main/default/objects/Event_Registration__c/fields/Second_Offer_Made__c.field-meta.xml
<CustomField>
    <fullName>Second_Offer_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the individual received a second offer from the university?</inlineHelpText>
    <label>Second Offer Made</label>
    <type>Checkbox</type>
</CustomField>