force-app/main/default/objects/Event_Registration__c/fields/Secondary_Course_Interests__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Course_Interests__c</fullName>
    <description>The secondary courses of interest that the individual is interested in when attending the event</description>
    <label>Secondary Course Interest(s)</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>