force-app/main/default/objects/Event_Registration__c/fields/Secondary_Subject_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subject_Area_of_Interest__c</fullName>
    <description>The secondary subject area of interest</description>
    <label>Secondary Subject Area of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>