force-app/main/default/objects/Event_Registration__c/fields/Send_Event_Order_Notification_Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Event_Order_Notification_Email_Time__c</fullName>
    <description>Data and time at which we needs to send Event Registration confirmation Notification</description>
    <inlineHelpText>Data and time at which we needs to send Event Registration confirmation Notification</inlineHelpText>
    <label>Send Event Order Notification Email Time</label>
    <type>DateTime</type>
</CustomField>