force-app/main/default/objects/Event_Registration__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Session the individual is interested in attending</description>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Event_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>