force-app/main/default/objects/Event_Registration__c/fields/Session_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Session_Registration_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://eventsdev1-universityofportsmouth.cs100.force.com/s/session-registration?recid=&quot; &amp;  Id   ,&quot;Session Register&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Registration URL</label>
    <type>Text</type>
</CustomField>