force-app/main/default/objects/Event_Registration__c/fields/State_County__c.field-meta.xml
<CustomField>
    <fullName>State_County__c</fullName>
    <description>This field is used to store State/County</description>
    <inlineHelpText>This field is used to store State/County</inlineHelpText>
    <label>State/County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>