force-app/main/default/objects/Event_Registration__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field is used to Street</description>
    <inlineHelpText>This field is used to Street</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>