force-app/main/default/objects/Event_Registration__c/fields/Support_with_Travel_Costs_Required__c.field-meta.xml
<CustomField>
    <fullName>Support_with_Travel_Costs_Required__c</fullName>
    <description>This field is used to determine Support with Travel Costs requirement</description>
    <inlineHelpText>travel cost support information populated further to event question set</inlineHelpText>
    <label>Support with Travel Costs Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>