force-app/main/default/objects/Event_Registration__c/fields/Title_on_Badge__c.field-meta.xml
<CustomField>
    <fullName>Title_on_Badge__c</fullName>
    <description>Title to be printed on Badge</description>
    <inlineHelpText>Title to be printed on Badge</inlineHelpText>
    <label>Title on Badge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>