force-app/main/default/objects/Event_Registration__c/fields/Travel_Plans_for_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Travel_Plans_for_the_Event__c</fullName>
    <description>This field is used to store the Travel Plans details</description>
    <inlineHelpText>travel plan information populated further to event question set</inlineHelpText>
    <label>Travel Plans for the Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>