force-app/main/default/objects/Event_Registration__c/fields/Type_of_Postgraduate_Study__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Postgraduate_Study__c</fullName>
    <description>This field is used to identify the type of post grade</description>
    <inlineHelpText>Type of PG study information populated further to event question set</inlineHelpText>
    <label>Type of Postgraduate Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Postgraduate Taught</fullName>
            </value>
            <value>
                <fullName>Postgraduate Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>