force-app/main/default/objects/Event_Registration__c/fields/Widening_Participation_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Widening_Participation_Indicators__c</fullName>
    <description>This field is used to store Widening Participation Indicators</description>
    <inlineHelpText>This field is used to store Widening Participation Indicators</inlineHelpText>
    <label>Widening Participation Indicators</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free School Meals</fullName>
            </value>
            <value>
                <fullName>GCSEs</fullName>
            </value>
            <value>
                <fullName>HE Progression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>