force-app/main/default/objects/Event_Registration__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>This field is used to store Work phone</description>
    <inlineHelpText>work phone information populated further to event question set</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>