force-app/main/default/objects/Event_Registration__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>This field is used to Zip/Postal Code</description>
    <inlineHelpText>This field is used to Zip/Postal Code</inlineHelpText>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>