force-app/main/default/objects/Event_Registration__c/recordTypes/AED.recordType-meta.xml
<RecordType>
    <fullName>AED</fullName>
    <active>true</active>
    <description>The record type for AED Events</description>
    <label>AED</label>
</RecordType>