force-app/main/default/objects/Event_Registration__c/recordTypes/Discovery.recordType-meta.xml
<RecordType>
    <fullName>Discovery</fullName>
    <active>true</active>
    <description>The record type for Discovery Events</description>
    <label>Discovery</label>
</RecordType>