force-app/main/default/objects/Event_Registration__c/recordTypes/Master_Event_Registration.recordType-meta.xml
<RecordType>
    <fullName>Master_Event_Registration</fullName>
    <active>true</active>
    <description>This record type for the Master Events</description>
    <label>Master Event Registration</label>
</RecordType>