force-app/main/default/objects/Event_Registration__c/recordTypes/Open_Day.recordType-meta.xml
<RecordType>
    <fullName>Open_Day</fullName>
    <active>true</active>
    <description>The record type for Open Day</description>
    <label>Open Day</label>
</RecordType>