force-app/main/default/objects/Event_Registration__c/recordTypes/Open_Evening.recordType-meta.xml
<RecordType>
    <fullName>Open_Evening</fullName>
    <active>true</active>
    <description>The record type for Open Evening Events</description>
    <label>Open Evening</label>
</RecordType>