force-app/main/default/objects/Event_Registration__c/recordTypes/Recruitment_and_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_and_Outreach</fullName>
    <active>true</active>
    <description>The record type for School/College Outreach Events</description>
    <label>Recruitment and Outreach</label>
</RecordType>